<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/calculation_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_gray"
        app:cardElevation="5dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvLabelPresentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_present_value"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPresentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12345"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelPresentValue" />

            <TextView
                android:id="@+id/tvLabelFutureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_future_value"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPresentValue" />

            <TextView
                android:id="@+id/tvFutureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelFutureValue" />

            <TextView
                android:id="@+id/tvLabelInterestRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_interest_rate"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tvLabelOperation"
                app:layout_constraintStart_toEndOf="@+id/tvLabelPresentValue"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvInterestRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                app:layout_constraintEnd_toEndOf="@+id/tvLabelInterestRate"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelInterestRate" />

            <TextView
                android:id="@+id/tvLabelMonths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_months"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tvLabelOperation"
                app:layout_constraintStart_toEndOf="@+id/tvLabelFutureValue"
                app:layout_constraintTop_toBottomOf="@+id/tvInterestRate" />

            <TextView
                android:id="@+id/tvMonths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                app:layout_constraintEnd_toEndOf="@+id/tvLabelMonths"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelMonths" />

            <TextView
                android:id="@+id/tvLabelOperation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_operation"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvOperation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Future"
                app:layout_constraintEnd_toEndOf="@+id/tvLabelOperation"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelOperation" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>